fix: overflow and dropdown

--- a/app/src/styles/landing/formatdropdown.scss
+++ b/app/src/styles/landing/formatdropdown.scss
@@ -35,7 +35,7 @@
   position: absolute;
   left: 0;
   width: 10vw;
-  bottom: calc(100% + 6px);
+  bottom: 60px;
   padding: 8px 0;
   list-style: none;
 
