--- a/app/src/styles/landing/inputarea.scss
+++ b/app/src/styles/landing/inputarea.scss
@@ -121,6 +121,7 @@
     font-family: inherit;
     resize: none;
     outline: none;
+    overflow-y: scroll;
     max-height: 200px;
     min-height: 52px;
 
