--- a/app/src/styles/landing/modal.scss
+++ b/app/src/styles/landing/modal.scss
@@ -24,6 +24,7 @@
 .modal-content {
   width: 80%;
   margin: 20px;
+  margin-top: 0;
   padding: 20px;
   color: $color-text;
   border-radius: $radius-lg;
